finished resources for class 1

--- a/1.setting_up_your_environment.ipynb
+++ b/1.setting_up_your_environment.ipynb
@@ -20,7 +20,7 @@
    "metadata": {},
    "source": [
     "------\n",
-    "# Clone repository\n",
+    "# Clone the `origin` repository\n",
     "\n",
     "**1. Clone the git repository for this class.**<br>\n",
     "*You may want to add your SSH key first so you don't have to keep entering your username and password every time you push/pull to Github.*\n",
@@ -40,20 +40,44 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "------\n",
+    "# Push to your own repository\n",
+    "First, open an blank notebook and add your name to the end of the file. Then, update `.gitignore` to include notebooks with `*solutions.ipynb`\n",
+    "\n",
+    "* Create a repository in your own Github account\n",
+    "* Add your keys to Github (if you haven't done it already)\n",
+    "* Add your repository as a remote alias\n",
+    "* Push to your work to your own repository\n",
+    "\n",
+    "[Github Slides](https://github.com/travisDhuang/DAT8/blob/master/slides/02_git_github.pdf)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
    "source": [
     "------\n",
-    "# Pulling from the git repo"
+    "# Pushing and puling"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "From now on, we will *pull* our work from the origin repository and *push* your own work to your personal repository.\n",
+    "\n",
     "Before each lesson, pull updates from the git repo by doing the following:\n",
-    "* ```git pull origin master```"
+    "* `git pull origin master`\n",
+    "\n",
+    "During each lesson, open the blank notebook and add your name to the end of the title \n",
+    "* (e.g. `2.data_types_josephine`)\n",
+    "\n",
+    "After each lesson, push your work to your personal repo by doing the following:\n",
+    "* `git push public master`"
    ]
   }
  ],
