fixed typo and added /home/jovyan/work

--- a/1.setting_up_your_environment.ipynb
+++ b/1.setting_up_your_environment.ipynb
@@ -28,8 +28,8 @@
     "\n",
     "**2. From the cloned folder, pull the Docker image.**<br>\n",
     "We will use an image for running a Jupyter server and call our container **py_class**. *You can call this something else if you like.*\n",
-    "* ```docker pull josephinemho/custom-dockerfile```<vr>\n",
-    "* ```docker run -it -v `pwd`:/home/jovyan -p 8888:8888 --name py_class josephinemho/custom-dockerfile```<br>\n",
+    "* ```docker pull josephinemho/custom_dockerfile```<vr>\n",
+    "* ```docker run -d -v `pwd`:/home/jovyan/work -p 8888:8888 --name py_class josephinemho/custom_dockerfile```<br>\n",
     "\n",
     "**3. Hold down the ```command/ctrl``` key and click on the link to get to the Jupyter server in your browser.**<br>\n",
     "Alternatively, you can use the following command to get the link:\n",
