prep for class 3

--- a/2.variables.ipynb
+++ b/2.variables.ipynb
@@ -63,9 +63,9 @@
    "outputs": [],
    "source": [
     "# I've eaten 3 cupcakes\n",
+    "\n",
     "cupcakes_ive_eaten = 3\n",
-    "print(cupcakes_ive_eaten)\n",
-    "# Prints 3"
+    "print(cupcakes_ive_eaten)"
    ]
   },
   {
@@ -117,6 +117,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "scrolled": true,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -329,7 +330,8 @@
    "outputs": [],
    "source": [
     "cupcakes_left_in_box = 6\n",
-    "cupcakes_left_in_box = cupcakes_left_in_box - 1 print(cupcakes_ive_eaten)"
+    "cupcakes_left_in_box = cupcakes_left_in_box - 1 \n",
+    "print(cupcakes_ive_eaten)"
    ]
   },
   {
@@ -342,7 +344,8 @@
    },
    "outputs": [],
    "source": [
-    "cupcakes_left_in_box = cupcakes_left_in_box - cupcakes_ive_eaten print(cupcakes_ive_eaten)"
+    "cupcakes_left_in_box = cupcakes_left_in_box - cupcakes_ive_eaten \n",
+    "print(cupcakes_ive_eaten)"
    ]
   },
   {
@@ -366,6 +369,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Make a variable to hold the number of guitars you own (3).\n",
+    "my_guitars = 3\n",
+    "\n",
+    "# Make a variable to hold the number of guitars Nikhil owns (1). \n",
+    "nikhils_guitars = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -373,11 +389,23 @@
    },
    "outputs": [],
    "source": [
-    "# Make a variable to hold the number of guitars you own (3).\n",
-    "\n",
-    "# Make a variable to hold the number of guitars Nikhil owns (1). \n",
-    "\n",
-    "# You give 2 of your guitars to Nikhil, so subtract 2 from you and add 2 to Nikhil."
+    "# You give 2 of your guitars to Nikhil, so subtract 2 from you and add 2 to Nikhil.\n",
+    "my_guitars = my_guitars - 2\n",
+    "nikhils_guitars += 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "print(my_guitars)\n",
+    "print(nikhils_guitars)"
    ]
   },
   {
@@ -431,14 +459,35 @@
    "outputs": [],
    "source": [
     "# Declare two variables `num1` and `num2` and assign them to any numbers you'd like.\n",
+    "num1 = 1\n",
+    "num2 = 3\n",
     "\n",
     "# Set `num1` to the result of subtracting `num1` from the `num2`.\n",
+    "num1 -= num2\n",
     "\n",
-    "# Create a new variable `num3` that will help us tell if `num2` is even or odd.\n",
-    "\n",
-    "# Using shorthand, add 5 to `num1`.\n",
-    "\n",
-    "# Print out `num1`, `num2`, and `num3`\n"
+    "# Tell if `num2` is even or odd.\n",
+    "if num2 %2 == 0:\n",
+    "    print(num2, \"is even\")\n",
+    "else:\n",
+    "    print(num2, \"is odd\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "```\n",
+    "if <conditional>:\n",
+    "    action here\n",
+    "    \n",
+    "elif <conditional>:\n",
+    "    \n",
+    "else:\n",
+    "```"
    ]
   },
   {
@@ -589,11 +638,128 @@
    },
    "outputs": [],
    "source": [
-    "box_contents = \"cupcakes\" # This is a string\n",
-    "print(box_contents) # It's a normal variable - we can print it.\n",
-    "best_snack = \"Frosted Cupcakes\" # This is a string.\n",
-    "cupcakes_ive_eaten = 5 # No quotes - this is a number.\n",
-    "cupcakes_ive_eaten_as_string = \"5\" # Because this is in quotes, this is a string."
+    "cupcakes_ive_eaten = 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "type(cupcakes_ive_eaten)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "cupcakes_ive_eaten = \"5\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "type(cupcakes_ive_eaten)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "cupcakes_ive_eaten + 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "cupcakes_ive_eaten + \" I've eaten\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "cupcakes_ive_eaten"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "print(\"I've eaten {cupcakes_ive_eaten} cupcakes\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Old way of doing f strings\n",
+    "print(\"I've eaten {} cupcakes\".format(cupcakes_ive_eaten))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Better way of doing f strings\n",
+    "print(f\"I've eaten {cupcakes_ive_eaten} cupcakes\")"
    ]
   },
   {
@@ -612,17 +778,6 @@
     "4. We'll print out these variables\n",
     "5. We'll add `4` to `speed`- what happens?"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -663,7 +818,7 @@
     "- Numerical variables adds (`5 + 5 = 10`).\n",
     "- String variables *concatenate* (`\"Doc\" + \"Brown\" = \"DocBrown\"`).\n",
     "  - *Pssst: Pronunciation tip: con-CAT-en-ATE*\n",
-    "- Numerical strings concatenate to new strings! (`\"5\" + `\"4\"` = `\"54\"`)"
+    "- Numerical strings concatenate to new strings! (`\"5\"` + `\"4\"` = `\"54\"`)"
    ]
   },
   {
@@ -679,8 +834,7 @@
     "first_name = \"Doc\"\n",
     "last_name = \"Brown\"\n",
     "full_name = first_name + last_name\n",
-    "print full_name\n",
-    "# Prints \"DocBrown\"."
+    "print(full_name)"
    ]
   },
   {
@@ -812,6 +966,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "scrolled": true,
     "slideshow": {
      "slide_type": "fragment"
     }
