added repo link as syllabus

--- a/0.daily_tasks.ipynb
+++ b/0.daily_tasks.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Note: please bookmark https://github.com/josephinemho/python_class - this will be where you can find your course materials, homework and additional resources."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# 1. Pull from origin remote\n",
     "* `cd` into your working directory (e.g. python_class)\n",
     "* `git pull origin master`"
