--- a/1.setting_up_your_environment/1.setting_up_your_environment_v2.ipynb
+++ b/1.setting_up_your_environment/1.setting_up_your_environment_v2.ipynb
@@ -1,6 +1,38 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Set up SSH keys for class\n",
+    "Different ways of accessing a server:\n",
+    "* Kerberos authentication\n",
+    "* RSA token\n",
+    "* SSH keys (<u>S</u>ecure <u>SH</u>ell)\n",
+    "\n",
+    "Why are we using SSH keys?\n",
+    "* I'm too lazy to add each of you to the `/etc/security/access.conf` file :P\n",
+    " * Let's try adding one person's username to that file and test his/her access - I would have to do this for everyone unless you all happen to belong in the same LDAP group, then I could just add the LDAP group.\n",
+    "* SSH uses asymmetric ciphers encryption, whereas symmetric ciphers make it possible for username and passwords can be stolen in the middle\n",
+    " * Symmetric encryption = we both have the same template (If I say \"ABC\", that means \"ZYX\") - encryption and decryption occurs together.\n",
+    " * Asymmetric encryption = I have a private key (decrypt key) and all my servers have a public key (encrypt key). \n",
+    "\n",
+    "\n",
+    "**1. I've created an SSH keypair for the class to access our class server `python-class`**\n",
+    " * Share the private key **securely** via https://onetimesecret.com/\n",
+    " * Save the key somewhere safe\n",
+    " \n",
+    "**2. SSH as user `student` to server `python-class`**\n",
+    " * `ssh -i id_rsa_python_class student@python-class`\n",
+    " \n",
+    "**3. Create your working directory**\n",
+    " * `mkdir <username>`\n",
+    " * `cd <username>`\n",
+    " * `pwd` (make sure you are in your own directory so you're not working in someone else's space)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
