--- a/1.setting_up_your_environment/1.setting_up_your_environment_v2.ipynb
+++ b/1.setting_up_your_environment/1.setting_up_your_environment_v2.ipynb
@@ -55,33 +55,35 @@
     "# Clone the `origin` repository\n",
     "\n",
     "**1. Clone the git repository for this class.**<br>\n",
-    "*You may want to add your SSH key first so you don't have to keep entering your username and password every time you push/pull to Github.*\n",
+    "* Note: Make sure you are in your own directory!\n",
     "* ```git clone git@github.com:josephinemho/python_class.git```\n",
     "\n",
     "**2. From the cloned folder, pull the Docker image.**<br>\n",
-    "We will use an image for running a Jupyter server and call our container **py_class**. *You can call this something else if you like.*\n",
-    "* ```docker pull josephinemho/custom_dockerfile```<vr>\n",
-    "* ```docker run -d -v `pwd`:/home/jovyan/work -p 8888:8888 --name py_class josephinemho/custom_dockerfile```<br>\n",
+    "We will use an image for running a Jupyter server and call our container **<your_username>**.\n",
+    "* ```docker pull jupyter/minimal-notebook```<vr>\n",
+    "* ```docker run -d -v `pwd`:/home/jovyan/work -p <your_assigned_port>:8888 --name <your_username> jupyter/minimal-notebook```<br>\n",
     "\n",
     "**3. Hold down the ```command/ctrl``` key and click on the link to get to the Jupyter server in your browser.**<br>\n",
     "Alternatively, you can use the following command to get the link:\n",
-    "* ```docker exec py_class jupyter notebook list```\n",
+    "* ```docker exec <your_username> jupyter notebook list```\n",
     "\n",
-    "You should be able to access the cloned repository and start coding in Python using Jupyter notebooks!"
+    "You should be able to access the cloned repository via your web browser and start coding in Python using Jupyter notebooks!"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "------\n",
     "# Push to your own repository\n",
-    "First, open an blank notebook and add your name to the end of the file. Then, update `.gitignore` to include notebooks with `*solutions.ipynb`\n",
+    "Duplicate a notebook and add your name to the end of the file. Then, update `.gitignore` to include notebooks with `*jmho*`\n",
     "\n",
     "* Create a repository in your own Github account\n",
-    "* Add your keys to Github (if you haven't done it already)\n",
-    "* Add your repository as a remote alias\n",
-    "* Push to your work to your own repository\n",
+    "* Add your key to Github (`cat ~/.ssh/id_rsa.pub`)\n",
+    "* Add your repository as a remote alias (`git remote add <username> <your_github_repository>\n",
+    "* Check that the new remote has been added (`git remote -v`)\n",
+    "* Push to your work to your own repository (`git push <username> master`)\n",
     "\n",
     "[Github Slides](https://github.com/travisDhuang/DAT8/blob/master/slides/02_git_github.pdf)"
    ]
@@ -106,7 +108,7 @@
     "* `git pull origin master`\n",
     "\n",
     "During each lesson, open the blank notebook and add your name to the end of the title \n",
-    "* (e.g. `2.data_types_josephine`)\n",
+    "* (e.g. `2.data_types_jmho`)\n",
     "\n",
     "After each lesson, push your work to your personal repo by doing the following:\n",
     "* `git push public master`"
