for large classes

--- a/1.setting_up_your_environment/1.setting_up_your_environment_v2.ipynb
+++ b/1.setting_up_your_environment/1.setting_up_your_environment_v2.ipynb
@@ -111,7 +111,9 @@
     "* (e.g. `2.data_types_jmho`)\n",
     "\n",
     "After each lesson, push your work to your personal repo by doing the following:\n",
-    "* `git push public master`"
+    "* `git push public master`\n",
+    "\n",
+    "See [0.daily_tasks.ipynb](https://github.com/josephinemho/python_class/blob/master/0.daily_tasks.ipynb) for details."
    ]
   }
  ],
