for small classes

--- a/1.setting_up_your_environment/1.setting_up_your_environment_v1.ipynb
+++ b/1.setting_up_your_environment/1.setting_up_your_environment_v1.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# SSH into your server"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Install Docker\n",
     "* `yum install docker`\n",
     "* `service docker restart`\n",
