scripting work done in class

--- a/4.scripting/5.scripting.ipynb
+++ b/4.scripting/5.scripting.ipynb
@@ -33,11 +33,244 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Turn list into csv file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "myfile = open(\"extract_from_textfile.txt\", \"rt\") # open lorem.txt for reading text\n",
+    "contents = myfile.read()         # read the entire file into a string\n",
+    "myfile.close()                   # close the file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(contents)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "people = {1: {'name': 'John', 'age': '27', 'sex': 'Male'},\n",
+    "          2: {'name': 'Marie', 'age': '22', 'sex': 'Female'}}\n",
+    "\n",
+    "people[3] = {}\n",
+    "\n",
+    "people[3]['name'] = 'Luna'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "info_dict = {'host': {'ip': [],\n",
+    "             'mac': []}}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'host': {'ip': [], 'mac': []}}"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "info_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path = 'extract_from_textfile.txt'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Exercise:\n",
+    "    def __init__(self):\n",
+    "        self.host = 'blah'\n",
+    "        \n",
+    "    def our_function(filepath):\n",
+    "        with open(filepath, 'rt') as myfile:  # Open file lorem.txt for reading text\n",
+    "            for myline in myfile:                 # For each line, read it to a string \n",
+    "                if \"Node Name\" in myline:\n",
+    "                    self.host = myline.split(\": \")[1][:-1]\n",
+    "                elif \"TCP/IP Address\" in myline:\n",
+    "                    info_dict[host][ip] = myline.split(\": \")[1][:-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test = Exercise()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "our_function() takes 1 positional argument but 2 were given",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-102-08ec694d0cde>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtest\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mour_function\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: our_function() takes 1 positional argument but 2 were given"
+     ]
+    }
+   ],
+   "source": [
+    "test.our_function(path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'blah'"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test.host"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'ANTMECH2'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-92-5129f35d9c05>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      7\u001b[0m             \u001b[0mhost\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmyline\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\": \"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m         \u001b[0;32melif\u001b[0m \u001b[0;34m\"TCP/IP Address\"\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mmyline\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m             \u001b[0minfo_dict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mhost\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'ip'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmyline\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\": \"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m \u001b[0;31m#         elif \"MAC\" in myline:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;31m#             mac = myline.split(\": \")[1][:-1]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'ANTMECH2'"
+     ]
+    }
+   ],
+   "source": [
+    "info_dict = {host: {'ip': [],\n",
+    "             'mac': []}}\n",
+    "\n",
+    "with open('extract_from_textfile.txt', 'rt') as myfile:  # Open file lorem.txt for reading text\n",
+    "    for myline in myfile:                 # For each line, read it to a string \n",
+    "        if \"Node Name\" in myline:\n",
+    "            host = myline.split(\": \")[1][:-1]\n",
+    "        elif \"TCP/IP Address\" in myline:\n",
+    "            info_dict[host][ip] = myline.split(\": \")[1][:-1]\n",
+    "#         elif \"MAC\" in myline:\n",
+    "#             mac = myline.split(\": \")[1][:-1]\n",
+    "#             info_dict[host] = {'MAC': myline.split(\": \")[1][:-1]}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'ANTMECH2': {'MAC': '00:50:56:92:00:61'},\n",
+       " 'CAE-LIC02': {'MAC': '00:50:56:86:57:23'},\n",
+       " 'CAE-LMGR1': {'MAC': '00:03:BA:06:3B:1C'},\n",
+       " 'CAE-LMGR2': {'MAC': '00:03:BA:05:18:50'},\n",
+       " 'CAE-LMGR3': {'MAC': '00:03:BA:06:00:C8'},\n",
+       " 'CHPS-PROD-APP01': {'MAC': '00:50:56:86:10:2F'}}"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "info_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "info_dict = {}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for host in hostnames:\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
